# ing

./: .gitignore  CMakeLists.txt  README.md  readme.md
examples/: 0_ing_hello_window.c  CMakeLists.txt
include/: ing.h  ing_main_loop.h
include/extension/: ing_extension_api_common.h  ing_main_loop_extension_api.h  ing_widget_extension_api.h
include/internal/: ing_internal_common.h  ing_internal_main_loop_api.h
src/: CMakeLists.txt  ing_context_data_common.h  ing_core_utils.c  ing_core_utils.h  ing_dynamic_array.c  ing_dynamic_array.h  ing_generic_data_structures_common.h  ing_gtk_context_data.h  ing_gtk_main_loop.c  ing_hash_table.c  ing_hash_table.h  ing_linked_list.h  ing_qt_context_data.h  ing_qt_main_loop.cpp  ing_win32_context_data.h  ing_win32_main_loop.c
src/internal/: CMakeLists.txt  ing_context.c  ing_context.h  ing_core_utils.c  ing_core_utils.h  ing_data_structures_common.h  ing_dynamic_array.c  ing_dynamic_array.h  ing_dynamic_array_new.c  ing_dynamic_array_new.h  ing_extension_api_common.c  ing_generic_data_structures_common.h  ing_hash_table.c  ing_hash_table.h  ing_hash_table_new.c  ing_hash_table_new.h  ing_internal_main_loop_api.c  ing_linked_list.h  ing_main_loop_extension_api.c
test/: CMakeLists.txt  ing_test_core_utils.c  ing_test_core_utils.h  ing_test_dynamic_array.c  ing_test_dynamic_array.h  ing_test_hash_table.c  ing_test_hash_table.h  ing_test_linked_list.c  ing_test_linked_list.h  ing_test_main.c  ing_testing_assert.h
